# Write-Powerful-Rust-Macros

./: .gitignore  README.md
01/: README.md
01/1-first-program/: Cargo.toml
01/2-generic-functions/: Cargo.toml
02/: README.md
02/01-my-vec/: Cargo.toml  README.md
02/02-my-vec-trailing-comma-exercise-solution/: Cargo.toml
02/03-greeting/: Cargo.toml
02/04-trace-macros/: Cargo.toml  README.md
02/05-newtypes/: Cargo.toml  README.md
02/06-newtypes-exercise-solutions/: Cargo.toml  README.md
02/07-dsl/: Cargo.toml
02/08-dsl-exercise-solution/: Cargo.toml
02/09-compose/: Cargo.toml
02/10-exercise-1/: Cargo.toml
03/: README.md
04/: README.md
05/: README.md
06/: README.md
07/: README.md
08/: README.md
09/: README.md
09/4-with-sdk-calls/iac-macro/: Cargo.toml
09/4-with-sdk-calls/iac-macro/src/: errors.rs  input.rs  lambda.rs  lib.rs
10/: README.md
10/4-documentation/config-macro/: Cargo.toml
10/4-documentation/config-macro/src/: lib.rs
ch01/: Cargo.toml
ch02/: Cargo.toml  bacon.toml
ch02/ch02-compose/: README.md
ch02/ch02-compose/src/: main.rs
ch02/ch02-dsl/: Cargo.toml  README.md
ch02/ch02-dsl-exercise-solution/: Cargo.toml  README.md
ch02/ch02-dsl-exercise-solution/src/: main.rs
ch02/ch02-dsl/src/: main.rs
ch02/ch02-exercise-3/src/: main.rs
ch02/ch02-greeting/src/: greeting.rs  main.rs
ch02/ch02-my-vec/: Cargo.toml
ch02/ch02-my-vec-trailing-comma-exercise-solution/src/: main.rs
ch02/ch02-my-vec/src/: main.rs
ch02/ch02-newtypes/: Cargo.toml
ch02/ch02-newtypes-exercise-solutions/: Cargo.toml
ch02/ch02-newtypes/src/: main.rs
ch02/ch02-trace-macros/: Cargo.toml
ch02/ch02-trace-macros/src/: greeting.rs  main.rs
ch03/: Cargo.toml
ch04/: Cargo.toml
ch05/: Cargo.toml
util/: README.md
(+461 files in other folders)
