[package]
name = "iac-macro"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.18"
aws-sdk-s3 = "1.137.0"
aws-sdk-lambda = "1.130.0"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["extra-traits"] }
proc-macro2 = "1.0.106"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread"] }

[lib]
proc-macro = true
